@@ -30,24 +30,23 @@ import ee.ria.xroad.common.certificateprofile.CertificateProfileInfoProvider;
 import ee.ria.xroad.common.certificateprofile.GetCertificateProfile;
 import ee.ria.xroad.common.certificateprofile.impl.AuthCertificateProfileInfoParameters;
 import ee.ria.xroad.common.certificateprofile.impl.SignCertificateProfileInfoParameters;
-import ee.ria.xroad.common.conf.globalconf.ApprovedCAInfo;
-import ee.ria.xroad.common.conf.globalconf.GlobalConfProvider;
 import ee.ria.xroad.common.identifier.ClientId;
 import ee.ria.xroad.common.identifier.SecurityServerId;
 import ee.ria.xroad.common.util.CertUtils;
-import ee.ria.xroad.signer.protocol.dto.KeyUsageInfo;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.niis.xroad.common.acme.AcmeProperties;
 import org.niis.xroad.common.acme.AcmeService;
-import org.niis.xroad.restapi.exceptions.ErrorDeviation;
-import org.niis.xroad.restapi.service.ServiceException;
+import org.niis.xroad.common.exception.InternalServerErrorException;
+import org.niis.xroad.globalconf.GlobalConfProvider;
+import org.niis.xroad.globalconf.model.ApprovedCAInfo;
 import org.niis.xroad.restapi.util.FormatUtils;
 import org.niis.xroad.securityserver.restapi.cache.CurrentSecurityServerId;
 import org.niis.xroad.securityserver.restapi.dto.ApprovedCaDto;
-import org.niis.xroad.securityserver.restapi.facade.SignerProxyFacade;
 import org.niis.xroad.securityserver.restapi.util.OcspUtils;
+import org.niis.xroad.signer.client.SignerRpcClient;
+import org.niis.xroad.signer.protocol.dto.KeyUsageInfo;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
@@ -60,7 +59,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
-import static org.niis.xroad.restapi.exceptions.DeviationCodes.ERROR_CA_CERT_PROCESSING;
+import static org.niis.xroad.securityserver.restapi.exceptions.ErrorMessage.CA_CERT_PROCESSING;
 
 /**
  * Service that handles approved certificate authorities
@@ -81,7 +80,7 @@ public class CertificateAuthorityService {
     private final GlobalConfService globalConfService;
     private final GlobalConfProvider globalConfProvider;
     private final ClientService clientService;
-    private final SignerProxyFacade signerProxyFacade;
+    private final SignerRpcClient signerRpcClient;
     private final CurrentSecurityServerId currentSecurityServerId;
     private final AcmeService acmeService;
     private final AcmeProperties acmeProperties;
@@ -99,12 +98,12 @@ public class CertificateAuthorityService {
 
     /**
      * Return approved certificate authorities
-     * @param keyUsageInfo list CAs for this type of key usage. If null, list all.
+     * @param keyUsageInfo           list CAs for this type of key usage. If null, list all.
      * @param includeIntermediateCas true = also include intermediate CAs.
      *                               false = only include top CAs
-     * @throws InconsistentCaDataException if required CA data could not be extracted, for example due to OCSP
-     * responses not being valid
      * @return list of approved CAs
+     * @throws InconsistentCaDataException if required CA data could not be extracted, for example due to OCSP
+     *                                     responses not being valid
      */
     @Cacheable(GET_CERTIFICATE_AUTHORITIES_CACHE)
     public List<ApprovedCaDto> getCertificateAuthorities(KeyUsageInfo keyUsageInfo,
@@ -129,7 +128,7 @@ public class CertificateAuthorityService {
         String[] base64EncodedOcspResponses;
         try {
             String[] certHashes = CertUtils.getSha1Hashes(new ArrayList<>(filteredCerts));
-            base64EncodedOcspResponses = signerProxyFacade.getOcspResponses(certHashes);
+            base64EncodedOcspResponses = signerRpcClient.getOcspResponses(certHashes);
         } catch (Exception e) {
             throw new InconsistentCaDataException("failed to get read CA OCSP responses", e);
         }
@@ -166,12 +165,12 @@ public class CertificateAuthorityService {
 
     /**
      * Build a single {@code ApprovedCaDto} object using given parameters
-     * @param certificate CA certificate
+     * @param certificate               CA certificate
      * @param base64EncodedOcspResponse OCSP response
-     * @param subjectsToIssuers map linking all CA subject DNs to corresponding issuer DNs
+     * @param subjectsToIssuers         map linking all CA subject DNs to corresponding issuer DNs
      * @return approved CA DTO
      * @throws InconsistentCaDataException if required CA data could not be extracted, for example due to OCSP
-     * responses not being valid
+     *                                     responses not being valid
      */
     private ApprovedCaDto buildCertificateAuthorityDto(
             X509Certificate certificate, String base64EncodedOcspResponse,
@@ -208,7 +207,7 @@ public class CertificateAuthorityService {
         // path and is-top-ca info
         List<String> subjectDnPath = buildPath(certificate, subjectsToIssuers);
         builder.subjectDnPath(subjectDnPath);
-        builder.topCa(subjectDnPath.size() <= 1 && subjectName.equals(subjectDnPath.get(0)));
+        builder.topCa(subjectDnPath.size() <= 1 && subjectName.equals(subjectDnPath.getFirst()));
 
         return builder.build();
     }
@@ -223,7 +222,7 @@ public class CertificateAuthorityService {
         String issuer = certificate.getIssuerX500Principal().toString();
         pathElements.add(current);
         while (!current.equals(issuer) && subjectsToIssuers.containsKey(issuer)) {
-            pathElements.add(0, issuer);
+            pathElements.addFirst(issuer);
             current = issuer;
             issuer = subjectsToIssuers.get(current);
         }
@@ -244,14 +243,14 @@ public class CertificateAuthorityService {
 
     /**
      * Return correct CertificateProfileInfo for given parameters
-     * @param caName name of the CA
+     * @param caName       name of the CA
      * @param keyUsageInfo key usage
-     * @param memberId member when key usage = signing, ignored otherwise
+     * @param memberId     member when key usage = signing, ignored otherwise
      * @return CertificateProfileInfo
-     * @throws CertificateAuthorityNotFoundException if matching CA was not found
+     * @throws CertificateAuthorityNotFoundException    if matching CA was not found
      * @throws CertificateProfileInstantiationException if instantiation of certificate profile failed
-     * @throws WrongKeyUsageException if attempted to read signing profile from authenticationOnly ca
-     * @throws ClientNotFoundException if client with memberId was not found
+     * @throws WrongKeyUsageException                   if attempted to read signing profile from authenticationOnly ca
+     * @throws ClientNotFoundException                  if client with memberId was not found
      */
     public CertificateProfileInfo getCertificateProfile(String caName, KeyUsageInfo keyUsageInfo, ClientId memberId,
                                                         boolean isNewMember)
@@ -306,17 +305,17 @@ public class CertificateAuthorityService {
     /**
      * Thrown when attempted to find CA certificate status and other details, but failed
      */
-    public static class InconsistentCaDataException extends ServiceException {
+    public static class InconsistentCaDataException extends InternalServerErrorException {
         public InconsistentCaDataException(String s, Throwable t) {
-            super(s, t, new ErrorDeviation(ERROR_CA_CERT_PROCESSING));
+            super(s, t, CA_CERT_PROCESSING.build());
         }
 
         public InconsistentCaDataException(String s) {
-            super(s, new ErrorDeviation(ERROR_CA_CERT_PROCESSING));
+            super(s, CA_CERT_PROCESSING.build());
         }
 
         public InconsistentCaDataException(Throwable t) {
-            super(t, new ErrorDeviation(ERROR_CA_CERT_PROCESSING));
+            super(t, CA_CERT_PROCESSING.build());
         }
     }
 
