@@ -26,8 +26,6 @@
  */
 package org.niis.xroad.securityserver.restapi.service;
 
-import ee.ria.xroad.common.conf.globalconf.ConfigurationAnchor;
-import ee.ria.xroad.common.conf.serverconf.model.TspType;
 import ee.ria.xroad.common.identifier.ClientId;
 import ee.ria.xroad.common.identifier.SecurityServerId;
 
@@ -41,29 +39,43 @@ import org.junit.runner.RunWith;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.MockitoJUnitRunner;
-import org.niis.xroad.common.exception.util.CommonDeviationMessage;
+import org.niis.xroad.common.exception.ConflictException;
+import org.niis.xroad.common.exception.InternalServerErrorException;
+import org.niis.xroad.globalconf.GlobalConfProvider;
+import org.niis.xroad.globalconf.model.ConfigurationAnchor;
+import org.niis.xroad.globalconf.model.SharedParameters;
 import org.niis.xroad.restapi.config.audit.AuditDataHelper;
 import org.niis.xroad.restapi.config.audit.RestApiAuditProperty;
-import org.niis.xroad.restapi.exceptions.DeviationCodes;
-import org.niis.xroad.restapi.openapi.ConflictException;
 import org.niis.xroad.restapi.service.ConfigurationVerifier;
 import org.niis.xroad.securityserver.restapi.cache.CurrentSecurityServerId;
+import org.niis.xroad.securityserver.restapi.cache.MaintenanceModeStatus;
 import org.niis.xroad.securityserver.restapi.cache.SecurityServerAddressChangeStatus;
 import org.niis.xroad.securityserver.restapi.dto.AnchorFile;
+import org.niis.xroad.securityserver.restapi.dto.MaintenanceMode;
 import org.niis.xroad.securityserver.restapi.repository.AnchorRepository;
 import org.niis.xroad.securityserver.restapi.util.DeviationTestUtils;
 import org.niis.xroad.securityserver.restapi.util.TestUtils;
+import org.niis.xroad.serverconf.impl.entity.TimestampingServiceEntity;
+import org.niis.xroad.serverconf.impl.mapper.TimestampingServiceMapper;
+import org.niis.xroad.serverconf.model.TimestampingService;
 
 import java.nio.file.NoSuchFileException;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
+import java.util.Optional;
 
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
+import static org.niis.xroad.common.exception.util.CommonDeviationMessage.MISSING_PRIVATE_PARAMS;
 
 @RunWith(MockitoJUnitRunner.class)
 public class SystemServiceTest {
@@ -78,6 +90,8 @@ public class SystemServiceTest {
     @Mock
     private GlobalConfService globalConfService;
     @Mock
+    private GlobalConfProvider globalConfProvider;
+    @Mock
     private AnchorRepository anchorRepository;
     @Mock
     private ConfigurationVerifier configurationVerifier;
@@ -88,6 +102,7 @@ public class SystemServiceTest {
     @Mock
     private AuditDataHelper auditDataHelper;
     private final SecurityServerAddressChangeStatus addressChangeStatus = new SecurityServerAddressChangeStatus();
+    private final MaintenanceModeStatus maintenanceModeStatus = new MaintenanceModeStatus();
     @Rule
     public TemporaryFolder tempFolder = new TemporaryFolder();
 
@@ -95,19 +110,18 @@ public class SystemServiceTest {
 
     @Before
     public void setup() throws Exception {
-        TspType tsa1 = TestUtils.createTspType(TSA_1_URL, TSA_1_NAME);
-        TspType tsa2 = TestUtils.createTspType(TSA_2_URL, TSA_2_NAME);
+        TimestampingServiceEntity tsa1 = TestUtils.createTspTypeEntity(TSA_1_URL, TSA_1_NAME);
+        TimestampingServiceEntity tsa2 = TestUtils.createTspTypeEntity(TSA_2_URL, TSA_2_NAME);
 
-        when(globalConfService.getApprovedTspsForThisInstance()).thenReturn(
-                Arrays.asList(tsa1, tsa2));
+        when(globalConfService.getApprovedTspsForThisInstance()).thenReturn(TimestampingServiceMapper.get().toTargets(List.of(tsa1, tsa2)));
         ClientId.Conf ownerId = ClientId.Conf.create("CS", "GOV", "1111");
-        when(serverConfService.getConfiguredTimestampingServices()).thenReturn(new ArrayList<>(Arrays.asList(tsa1)));
+        when(serverConfService.getConfiguredTimestampingServiceEntities()).thenReturn(new ArrayList<>(List.of(tsa1)));
         SecurityServerId.Conf ownerSsId = SecurityServerId.Conf.create(ownerId, "TEST-INMEM-SS");
         when(currentSecurityServerId.getServerId()).thenReturn(ownerSsId);
 
         systemService = new SystemService(globalConfService, serverConfService, anchorRepository,
                 configurationVerifier, currentSecurityServerId, managementRequestSenderService, auditDataHelper,
-                addressChangeStatus);
+                addressChangeStatus, maintenanceModeStatus, globalConfProvider);
         systemService.setInternalKeyPath("src/test/resources/internal.key");
         systemService.setTempFilesPath(tempFolder.newFolder().getAbsolutePath());
     }
@@ -124,65 +138,52 @@ public class SystemServiceTest {
     }
 
     @Test
-    public void addConfiguredTimestampingService() throws
-            SystemService.DuplicateConfiguredTimestampingServiceException, TimestampingServiceNotFoundException {
-        TspType tspType = TestUtils.createTspType(TSA_2_URL, TSA_2_NAME);
+    public void addConfiguredTimestampingService()
+            throws SystemService.DuplicateConfiguredTimestampingServiceException, TimestampingServiceNotFoundException {
+        TimestampingService timestampingService = TestUtils.createTspType(TSA_2_URL, TSA_2_NAME);
 
-        assertEquals(1, serverConfService.getConfiguredTimestampingServices().size());
+        assertEquals(1, serverConfService.getConfiguredTimestampingServiceEntities().size());
 
-        systemService.addConfiguredTimestampingService(tspType);
+        systemService.addConfiguredTimestampingService(timestampingService);
 
-        assertEquals(2, serverConfService.getConfiguredTimestampingServices().size());
-        assertEquals(TSA_2_NAME, serverConfService.getConfiguredTimestampingServices().get(1).getName());
-        assertEquals(TSA_2_URL, serverConfService.getConfiguredTimestampingServices().get(1).getUrl());
+        assertEquals(2, serverConfService.getConfiguredTimestampingServiceEntities().size());
+        assertEquals(TSA_2_NAME, serverConfService.getConfiguredTimestampingServiceEntities().get(1).getName());
+        assertEquals(TSA_2_URL, serverConfService.getConfiguredTimestampingServiceEntities().get(1).getUrl());
     }
 
     @Test
     public void addConfiguredTimestampingServiceNonApproved() throws
-            SystemService.DuplicateConfiguredTimestampingServiceException {
-        TspType tspType = TestUtils.createTspType("http://test.com", "TSA 3");
+                                                              SystemService.DuplicateConfiguredTimestampingServiceException {
+        TimestampingService timestampingService = TestUtils.createTspType("http://test.com", "TSA 3");
 
-        try {
-            systemService.addConfiguredTimestampingService(tspType);
-            fail("should throw TimestampingServiceNotFoundException");
-        } catch (TimestampingServiceNotFoundException expected) {
-            // success
-        }
+        assertThrows(TimestampingServiceNotFoundException.class, () -> systemService.addConfiguredTimestampingService(timestampingService));
     }
 
     @Test
     public void addConfiguredTimestampingServiceDuplicate() throws TimestampingServiceNotFoundException {
-        TspType tspType = TestUtils.createTspType(TSA_1_URL, TSA_1_NAME);
+        TimestampingService timestampingService = TestUtils.createTspType(TSA_1_URL, TSA_1_NAME);
 
-        try {
-            systemService.addConfiguredTimestampingService(tspType);
-            fail("should throw DuplicateConfiguredTimestampingServiceException");
-        } catch (SystemService.DuplicateConfiguredTimestampingServiceException expected) {
-            // success
-        }
+        assertThrows(SystemService.DuplicateConfiguredTimestampingServiceException.class,
+                () -> systemService.addConfiguredTimestampingService(timestampingService));
     }
 
     @Test
     public void deleteConfiguredTimestampingService() throws TimestampingServiceNotFoundException {
-        TspType tspType = TestUtils.createTspType(TSA_1_URL, TSA_1_NAME);
+        TimestampingService timestampingService = TestUtils.createTspType(TSA_1_URL, TSA_1_NAME);
 
-        assertEquals(1, serverConfService.getConfiguredTimestampingServices().size());
+        assertEquals(1, serverConfService.getConfiguredTimestampingServiceEntities().size());
 
-        systemService.deleteConfiguredTimestampingService(tspType);
+        systemService.deleteConfiguredTimestampingService(timestampingService);
 
-        assertEquals(0, serverConfService.getConfiguredTimestampingServices().size());
+        assertEquals(0, serverConfService.getConfiguredTimestampingServiceEntities().size());
     }
 
     @Test
     public void deleteConfiguredTimestampingServiceNonExisting() {
-        TspType tspType = TestUtils.createTspType(TSA_2_URL, TSA_2_NAME);
+        TimestampingService timestampingService = TestUtils.createTspType(TSA_2_URL, TSA_2_NAME);
 
-        try {
-            systemService.deleteConfiguredTimestampingService(tspType);
-            fail("should throw TimestampingServiceNotFoundException");
-        } catch (TimestampingServiceNotFoundException expected) {
-            // success
-        }
+        assertThrows(TimestampingServiceNotFoundException.class,
+                () -> systemService.deleteConfiguredTimestampingService(timestampingService));
     }
 
     @Test
@@ -217,16 +218,14 @@ public class SystemServiceTest {
 
     @Test
     public void replaceAnchorFailVerification() throws Exception {
-        Mockito.doThrow(new ConfigurationVerifier.ConfigurationVerificationException(
-                        CommonDeviationMessage.MISSING_PRIVATE_PARAMS))
+        Mockito.doThrow(new InternalServerErrorException(MISSING_PRIVATE_PARAMS.build()))
                 .when(configurationVerifier).verifyConfiguration(any(), any());
         byte[] anchorBytes = FileUtils.readFileToByteArray(TestUtils.ANCHOR_FILE);
         try {
             systemService.replaceAnchor(anchorBytes);
             fail("Should have failed");
-        } catch (Exception e) {
-            DeviationTestUtils.assertErrorWithoutMetadata(DeviationCodes.ERROR_MISSING_PRIVATE_PARAMS,
-                    (ConfigurationVerifier.ConfigurationVerificationException) e);
+        } catch (InternalServerErrorException e) {
+            DeviationTestUtils.assertErrorWithoutMetadata(MISSING_PRIVATE_PARAMS.code(), e);
         }
     }
 
@@ -254,7 +253,7 @@ public class SystemServiceTest {
     }
 
     @Test
-    public void changeSecurityServerAddress() throws Exception {
+    public void changeSecurityServerAddress() {
         when(globalConfService.getSecurityServerAddress(any())).thenReturn("ss.address");
 
         systemService.changeSecurityServerAddress(SERVER_ADDRESS);
@@ -264,28 +263,168 @@ public class SystemServiceTest {
     }
 
     @Test
-    public void changeSecurityServerAddressAlreadySubmitted() throws Exception {
+    public void changeSecurityServerAddressAlreadySubmitted() {
         addressChangeStatus.setAddress(SERVER_ADDRESS);
 
         try {
             systemService.changeSecurityServerAddress("another address");
             fail();
         } catch (ConflictException e) {
-            assertEquals("Address change request already submitted.", e.getMessage());
+            assertEquals("Error[code=address_change_request_already_submitted]", e.getMessage());
             // ok
         }
     }
 
     @Test
-    public void changeSecurityServerAddressSameAddress() throws Exception {
+    public void changeSecurityServerAddressSameAddress() {
         when(globalConfService.getSecurityServerAddress(any())).thenReturn(SERVER_ADDRESS);
 
         try {
             systemService.changeSecurityServerAddress(SERVER_ADDRESS);
             fail();
         } catch (ConflictException e) {
-            assertEquals("Can not change to the same address.", e.getMessage());
+            assertEquals("Error[code=same_address_change_request]", e.getMessage());
             // ok
         }
+    }
+
+    @Test
+    public void getMaintenanceModeWhenEnabling() {
+        final var message = "Test message";
+
+        maintenanceModeStatus.enableRequested(message);
+        var result = systemService.getMaintenanceMode();
+        assertEquals(MaintenanceMode.Status.ENABLING, result.status());
+        assertEquals(message, result.message());
+        verifyNoInteractions(globalConfProvider);
+    }
+
+    @Test
+    public void getMaintenanceModeWhenDisabling() {
+        maintenanceModeStatus.disableRequested();
+        var result = systemService.getMaintenanceMode();
+        assertEquals(MaintenanceMode.Status.DISABLING, result.status());
+        assertNull(result.message());
+        verifyNoInteractions(globalConfProvider);
+    }
+
+    @Test
+    public void getMaintenanceModeWhenNoData() {
+        maintenanceModeStatus.clear();
+        final var ssId = SecurityServerId.Conf.create("DEV", "CLS", "MEMBER", "SS");
+
+        when(serverConfService.getSecurityServerId()).thenReturn(ssId);
+        when(globalConfProvider.getMaintenanceMode(ssId)).thenReturn(Optional.empty());
+
+        var result = systemService.getMaintenanceMode();
+        assertEquals(MaintenanceMode.Status.DISABLED, result.status());
+        assertNull(result.message());
+    }
+
+    @Test
+    public void getMaintenanceModeWhenDisabled() {
+        maintenanceModeStatus.clear();
+        final var ssId = SecurityServerId.Conf.create("DEV", "CLS", "MEMBER", "SS");
+
+        when(serverConfService.getSecurityServerId()).thenReturn(ssId);
+        when(globalConfProvider.getMaintenanceMode(ssId)).thenReturn(Optional.of(SharedParameters.MaintenanceMode.disabled()));
+
+        var result = systemService.getMaintenanceMode();
+        assertEquals(MaintenanceMode.Status.DISABLED, result.status());
+        assertNull(result.message());
+    }
+
+    @Test
+    public void getMaintenanceModeWhenEnabled() {
+        maintenanceModeStatus.clear();
+        final var ssId = SecurityServerId.Conf.create("DEV", "CLS", "MEMBER", "SS");
+        final var message = "Test message";
+
+        when(serverConfService.getSecurityServerId()).thenReturn(ssId);
+        when(globalConfProvider.getMaintenanceMode(ssId)).thenReturn(Optional.of(SharedParameters.MaintenanceMode.enabled(message)));
+
+        var result = systemService.getMaintenanceMode();
+        assertEquals(MaintenanceMode.Status.ENABLED, result.status());
+        assertEquals(message, result.message());
+    }
+
+    @Test
+    public void enableMaintenanceModeWhenPendingChange() {
+        final var message = "Test message";
+
+        maintenanceModeStatus.enableRequested(message);
+
+        var err = assertThrows(ConflictException.class, () -> systemService.enableMaintenanceMode(message));
+        assertEquals("Error[code=maintenance_mode_change_request_already_submitted]", err.getMessage());
+
+        maintenanceModeStatus.disableRequested();
+
+        err = assertThrows(ConflictException.class, () -> systemService.enableMaintenanceMode(message));
+        assertEquals("Error[code=maintenance_mode_change_request_already_submitted]", err.getMessage());
+    }
+
+    @Test
+    public void enableMaintenanceModeWhenEnabled() {
+        maintenanceModeStatus.clear();
+        final var ssId = SecurityServerId.Conf.create("DEV", "CLS", "MEMBER", "SS");
+        final var message = "Test message";
+
+        when(serverConfService.getSecurityServerId()).thenReturn(ssId);
+        when(globalConfProvider.getMaintenanceMode(ssId)).thenReturn(Optional.of(SharedParameters.MaintenanceMode.enabled(message)));
+
+        var err = assertThrows(ConflictException.class, () -> systemService.enableMaintenanceMode(message));
+        assertEquals("Error[code=already_enabled_maintenance_mode]", err.getMessage());
+    }
+
+    @Test
+    public void enableMaintenanceMode() {
+        maintenanceModeStatus.clear();
+        final var ssId = SecurityServerId.Conf.create("DEV", "CLS", "MEMBER", "SS");
+        final var message = "Test message";
+
+        when(serverConfService.getSecurityServerId()).thenReturn(ssId);
+        when(globalConfProvider.getMaintenanceMode(ssId)).thenReturn(Optional.of(SharedParameters.MaintenanceMode.disabled()));
+
+        systemService.enableMaintenanceMode(message);
+        verify(managementRequestSenderService).sendMaintenanceModeEnableRequest(eq(message));
+        assertInstanceOf(MaintenanceModeStatus.EnableRequested.class, maintenanceModeStatus.getStatus());
+    }
+
+    @Test
+    public void disableMaintenanceModeWhenPendingChange() {
+        maintenanceModeStatus.disableRequested();
+
+        var err = assertThrows(ConflictException.class, () -> systemService.disableMaintenanceMode());
+        assertEquals("Error[code=maintenance_mode_change_request_already_submitted]", err.getMessage());
+
+        maintenanceModeStatus.enableRequested(null);
+
+        err = assertThrows(ConflictException.class, () -> systemService.disableMaintenanceMode());
+        assertEquals("Error[code=maintenance_mode_change_request_already_submitted]", err.getMessage());
+    }
+
+    @Test
+    public void disableMaintenanceModeWhenDisabled() {
+        maintenanceModeStatus.clear();
+        final var ssId = SecurityServerId.Conf.create("DEV", "CLS", "MEMBER", "SS");
+
+        when(serverConfService.getSecurityServerId()).thenReturn(ssId);
+        when(globalConfProvider.getMaintenanceMode(ssId)).thenReturn(Optional.of(SharedParameters.MaintenanceMode.disabled()));
+
+        var err = assertThrows(ConflictException.class, () -> systemService.disableMaintenanceMode());
+        assertEquals("Error[code=already_disabled_maintenance_mode]", err.getMessage());
+    }
+
+    @Test
+    public void disableMaintenanceMode() {
+        maintenanceModeStatus.clear();
+        final var ssId = SecurityServerId.Conf.create("DEV", "CLS", "MEMBER", "SS");
+
+        when(serverConfService.getSecurityServerId()).thenReturn(ssId);
+        when(globalConfProvider.getMaintenanceMode(ssId)).thenReturn(Optional.of(SharedParameters.MaintenanceMode.enabled(null)));
+
+        systemService.disableMaintenanceMode();
+        verify(managementRequestSenderService).sendMaintenanceModeDisableRequest();
+        assertInstanceOf(MaintenanceModeStatus.DisableRequested.class, maintenanceModeStatus.getStatus());
     }
 }
